# audio-device-manager

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  build.sh  windows_build.ps1
examples/: pipewiretest.cpp
include/: ADM
include/audio_device_manager/: async.hpp  audio_backend.hpp  audio_device_manager.hpp  device.hpp  types.hpp
include/audio_device_manager/backends/: alsa_backend.hpp  dynamic_library.hpp  mock_backend.hpp  pulseaudio_backend.hpp  wasapi_backend.hpp
tests/: CMakeLists.txt  test_common_backend.cpp  test_device_diffing.cpp  test_mock_backend.cpp  test_multithreading.cpp  test_plattform_default_backends.cpp
